# Zentrale

./: README.md  README.org  REAME.md  docker-compose.yaml  flake.nix  sources.org
SCADA/: Cargo.toml  README.md  README.org
SCADA/src/: api.rs  hue.rs  main.rs  sse.rs  sysinfo.rs  tailscale.rs  ws.rs
VIS/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
VIS/src/: env.ts  routeTree.gen.ts  styles.css
VIS/src/collections/: network.ts
VIS/src/components/: dashboardSidebar.tsx
VIS/src/queries/: networkQueries.ts
VIS/src/routes/: Route.tsx  __root.tsx  _layout.tsx  index.tsx
VIS/src/routes/network/: devices.tsx  route.tsx  settings.tsx
VIS/src/routes/system/: route.tsx
