[package]
name = "SCADA"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
serde = {version= "1.0.219", features=["derive"]}
serde_json = "1.0.142"
tokio = {version = "1.47.1", features=["full"]}
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
