[package]
name = "SCADA"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = {version= "0.8.4", features= ["ws"]}
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = {version= "1.0.219", features=["derive"]}
serde_json = "1.0.142"
tokio = {version = "1.47.1", features=["full"]}
tower-http = { version = "0.6.6", features = ["cors","trace"] }
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.19", features=["env-filter"]}
